# secret-hitler-board-game-bot

./: .gitignore  README.md  bot.py  core  pyproject.toml
